2011-09-19  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/posix/spawni.c (script_execute): Always define it.
	It will be optimized away if unused.
	(maybe_script_execute): New function.
	(__spawni): Call it.

	* Makerules: Don't include tls.make.
	(config-tls): Always set to thread.
	* tls.make.c: File removed.

2011-09-19  Mike Frysinger  <vapier@gentoo.org>

	* Makeconfig (CPPFLAGS): Prepend $(CPPFLAGS-config).
	* config.make.in (CPPFLAGS-config): New substituted variable.

2011-09-15  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/s_finite.c: New file.

	* sysdeps/unix/sysv/linux/bits/in.h (IP_MULTICAST_ALL): Define.
	Patch mostly by Neil Horman <nhorman@tuxdriver.com>.

2011-09-15  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/i386/____longjmp_chk.S
	(CALL_FAIL): Use HIDDEN_JUMPTARGET for __fortify_fail.
	* sysdeps/unix/sysv/linux/x86_64/____longjmp_chk.S
	(CALL_FAIL): Likewise.
	* sysdeps/unix/sysv/linux/ia64/____longjmp_chk.S (CHECK_RSP): Likewise.
	(CALL_FAIL): Macro removed.
	Patch mostly by Mike Frysinger <vapier@gentoo.org>.

2011-09-15  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/fpu/bits/mathinline.h: Add fmax and fmin optimizations
	for __FINITE_MATH_ONLY__ == 1.

2011-09-15  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/powerpc/fpu/e_hypot.c (__ieee754_hypot): Use
	__ieee754_sqrt instead of sqrt.
	* sysdeps/powerpc/fpu/e_hypotf.c (__ieee754_hypotf): Use
	__ieee754_sqrtf instead of sqrtf.
	* sysdeps/powerpc/fpu/e_rem_pio2f.c (__ieee754_rem_pio2f): Use
	__floorf instead of floorf.
	* sysdeps/powerpc/fpu/k_rem_pio2f.c (__fp_kernel_rem_pio2f): Use
	__floorf, __truncf instead of floorf, truncf.

2011-09-14  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/fpu/s_copysign.S [ELF]: Use correct section.

	* sysdeps/x86_64/fpu/bits/mathinline.h (__MATH_INLINE): Use
	__extern_always_inline.
	Define lrint{f,} and llrint{f,} for 64-bit and in some situations for
	32-bit.
