@@ -1,3 +1,10 @@
+2011-09-21  Chung-Lin Tang  <cltang@codesourcery.com>
+	    Maxim Kuvyrkov  <maxim@codesourcery.com>
+	    Joseph Myers  <joseph@codesourcery.com>
+
+	* resolv/Makefile (LDLIBS-resolv.so): Link in $(elfobjdir)/ld.so
+	if needed for __stack_chk_guard.
+
 2011-09-19  Roland McGrath  <roland@hack.frob.com>
 
 	* sysdeps/posix/spawni.c (script_execute): Always define it.
